# epub2braille-app

./: README.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release-on-tag.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/braille/: mod.rs
src/lib/: Resumen.svelte
src/routes/: +page.svelte
src/routes/editor/: +page.svelte
