[package]
name = "epub2braille-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "epub2braille_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
scraper = "0.19"
